# office_claude

./: .gitignore  Caddyfile  Cargo.toml  README.md  config.toml.example  office_claude.service
migrations/: 0001_initial.sql  0002_session_initialized.sql
src/: auth.rs  cleanup.rs  codebases.rs  config.rs  db.rs  main.rs  prompt.rs  session.rs  terminal.rs  users.rs
static/: index.html  login.html  session.html  style.css  users.html
