[package]
name = "office_claude"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
argon2 = "0.5"
tower-sessions = "0.12"
tower-sessions-sqlx-store = { version = "0.13", features = ["sqlite"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
async-trait = "0.1"
